0.28
- added a "generic_file" icon (16x16)
- phpsniff library was removed from phpdocumentor source list
- FCKEditor was updated to 2.0
- safari was added to the compatibility list (thanks to Francesco Dominidiato)
- FCKConfig.ToolbarCanCollapse is now set to off (thanks to Francesco Dominidiato)
- fixed a bug on image preview mask printing (thanks to Francesco Dominidiato)
- image preview mask now show the file name in the title

0.27
- afterUpload event trigger was added
- FCKConfig.ProcessHTMLEntities is now off (thanks to Francesco Dominidiato) ;
- standardized accesskey notation in P4A_Button, now it renders as "[S] Save Row" instead of "Save Row (ALT+S)"
- bugfix on mysql_manager application
- P4A_I18N_Messages::get() now also accept no params, returning all messages
- asc/desc/selected alt for images were added to P4A_Table
- contribs were introduced, thanks to Major__Tom

0.26
- PEAR packages were updated fixing some security issues

0.25
- bugfix on P4A_Data_Source::prevRow(), now works well when calling it on the first row of a data source
- bugfix/beautifications on products_catalogue application
- bugfix on P4A_Table for a better rendering
- changed P4A_Table_Rows onBeforeDisplay, we cannot pass $rows by reference, thus you've to return $rows from your action handler

0.24
- changed XHTML output for textarea and rich_textarea, now HTML code in the value is escaped with htmlspecialchars(), allowing XHTML 1.1 validation
- added P4A_Quit_Toolbar, with only two buttons: print and quit
- added P4A_Mask_Image_Preview, system mask to view images preview
- many changed on the output of Field::getAsFile() ans Field::getAsImage()
  - removed the HTML links
  - added preview button for images
  - added download button
- changed P4A_Href::composeStringActions(), converted to XHTML parameter separator (&amp; instead of &) (check your php.ini configuration to support this feature)
- changed P4A_Data_Source::exportAsCSV(), added a die() on the last row